--- a/index.html
+++ b/index.html
@@ -1,15 +1,52 @@
+<!DOCTYPE html>
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <div class="card">
-            <img class="avatar" src="images/RubberBoy.jpg">
-            <div class="text-col" >
-                <h3>Rubber Boy</h3>
-                <p>Super Hero </p>
-                <h4>Baltimore, MD</h4>
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+    <!-- HERO SECTION -->
+    <div id="hero">
+        <div class="title-position">
+            <h1 class="title-visit">Visit Torshov</h1>
+            <h2 class="title-descr">Enjoy culture and sports in this vibrant district close to the center of Oslo.</h2>
+        </div>
+    </div>
+
+    <!-- ACTIVITIES SECTION -->
+    <div id="activities">
+        <h3 class="activities-title">Top three activities to do at Torshov</h3>
+        <div id="activities-flex">
+            <div class="columns">
+                <img class="activities-col" src="images/park.jpg" alt="a park">
+                <h3>Go for a picnic in the local park</h3>
+                <p>The Torshov Park is perfect picnic, getting some sun, or just chilling out.</p>
+            </div>
+            <div class="columns">
+                <img class="activities-col" src="images/theatre.jpg" alt="theatre building">
+                <h3>Attend a show or a concert</h3>
+                <p>The Torshov Theatre is a great place to spend your night out.</p>
+            </div>
+            <div class="columns">
+                <img class="activities-col" src="images/sports.jpg" alt="sports equipment">
+                <h3>Get sweaty at the sports field</h3>
+                <p>Play volleyball, football, basketball or lift some weigths.</p>
             </div>
         </div>
-    </body>
+    </div>
+
+    <!-- GUIDE SECTION -->
+    <div id="guide">
+        <div class="text-col">
+            <h3>Your guide</h3>
+            <p>"I have lived at Torshov for over 14 years, so I can show you all of its best parts and hidden secrets."
+            </p>
+            <h4>Ricky the Rubber Boy</h4>
+        </div>
+        <img class="avatar" src="images/RubberBoy.jpg">
+    </div>
+</body>
+
 </html>
